tests/12-enums.stderr
error: Explicit default is required for enums.
help: Add `#[default(value = "...")]` to the enum definition
 --> $DIR/12-enums.rs:4:6
  |
4 | enum Foo {
  |      ^^^
